--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,16 +6,16 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Heal_Tech"
         tools:targetApi="31">
         <activity
-            android:name=".HealthArticlesActivity"
+            android:name=".HealthArticlesDetailsActivity"
             android:exported="false" />
         <activity
-            android:name=".BuyMedicineBookActivity"
+            android:name=".HealthArticlesActivity"
             android:exported="false" />
         <activity
             android:name=".CartBuyMedicineActivty"
@@ -28,9 +28,6 @@
             android:exported="false" />
         <activity
             android:name=".OrderDetailsActivity"
-            android:exported="false" />
-        <activity
-            android:name=".LabTestBookActivity"
             android:exported="false" />
         <activity
             android:name=".CartLabActivity"
